<resources>
    <string name="app_name" translatable="false">WasteNot</string>
    <string name="password">Password</string>

    <!-- Navigation Drawer -->
    <string name="menu_donate">Donate Food</string>
    <string name="menu_claim">Claim a Donation</string>
    <string name="menu_deliver">Deliver Food</string>
    <string name="menu_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- DonationList Activity -->
    <string name="new_donation">New Donation</string>
    <string name="your_donations">Your Active Donations</string>
    <string name="your_donations_title">Your Donations</string>

    <!-- DonationList Item-->
    <string name="status">Status:</string>
    <string name="packaged_tray">Packaged (Tray)</string>
    <string name="packaged_indiv">Packaged (indiv)</string>
    <string name="baked">Baked Goods</string>
    <string name="meat">Meat</string>
    <string name="dairy">Dairy</string>
    <string name="produce">Produce</string>
    <string name="other">Other</string>
    <string name="servings_suffix">%d servings</string>
    <string name="pickup_by_prefix">"Pick up by %s"</string>
    <string name="ready_at_prefix">Ready at %s</string>
    <string name="dropoff_by_prefix">Dropoff by %s</string>
    <string name="pickup_around_prefix">Pick up around %s</string>
    <string name="status_claimed">Claimed,\nRequesting Driver</string>
    <string name="status_unclaimed">Not Yet Claimed</string>
    <string name="status_delivery_claimed">Delivery Claimed</string>


    <!-- NewDonation Activity -->
    <string name="add_donation_title">Make a Donation</string>
    <string name="add_donation_button">Add Donation</string>
    <string name="when_food_ready">When will the food be ready?</string>
    <string name="pickup_end_time">Pickup End Time?</string>
    <string name="food_types">Food Types</string>
    <string name="how_many_servings">Approx how many could this feed?</string>
    <string name="fit_in_car">Will this donation fit in one car?</string>
    <string name="other_info">Any other information?</string>

    <string-array name="food_types_array">
        <item>Select a Food Type</item>
        <item>Dairy</item>
        <item>Meat &amp; Other Protein</item>
        <item>Produce</item>
        <item>Baked Goods</item>
        <item>Prepared - Individually Packaged</item>
        <item>Prepared - Tray/Multi-Serving</item>
        <item>Other</item>
    </string-array>

    <string-array name="ready_time_array">
        <item>From 10am</item>
        <item>From 11am</item>
        <item>From 12pm</item>
        <item>From 1pm</item>
        <item>From 2pm</item>
        <item>From 3pm</item>
        <item>From 4pm</item>
        <item>From 5pm</item>
        <item>From 6pm</item>
        <item>From 7pm</item>
        <item>From 8pm</item>
        <item>From 9pm</item>
        <item>From 10pm</item>
    </string-array>

    <string-array name="end_time_array">
        <item>Before 10am</item>
        <item>Before 11am</item>
        <item>Before 12pm</item>
        <item>Before 1pm</item>
        <item>Before 2pm</item>
        <item>Before 3pm</item>
        <item>Before 4pm</item>
        <item>Before 5pm</item>
        <item>Before 6pm</item>
        <item>Before 7pm</item>
        <item>Before 8pm</item>
        <item>Before 9pm</item>
        <item>Before 10pm</item>
    </string-array>

    <string-array name="pickup_time_array">
        <item>Select a Pickup Time</item>
        <item>10:00am</item>
        <item>10:30am</item>
        <item>11:00am</item>
        <item>11:30am</item>
        <item>12:00pm</item>
        <item>12:30pm</item>
        <item>1:00pm</item>
        <item>1:30pm</item>
        <item>2:00pm</item>
        <item>2:30pm</item>
        <item>3:00pm</item>
        <item>3:30pm</item>
        <item>4:00pm</item>
        <item>4:30pm</item>
        <item>5:00pm</item>
        <item>5:30pm</item>
        <item>6:00pm</item>
        <item>6:30pm</item>
        <item>7:00pm</item>
        <item>7:30pm</item>
        <item>8:00pm</item>
        <item>8:30pm</item>
        <item>9:00pm</item>
        <item>9:30pm</item>
        <item>10:00pm</item>
    </string-array>

    <string-array name="fit_in_car_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="servings_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>75</item>
        <item>100+</item>
    </string-array>

    <!-- Delivery Activity -->
    <string name="map">Map</string>


    <!-- Strings related to login -->
    <string name="title_activity_delivery">Deliver Food</string>
    <string name="register">Register</string>
    <string name="view_your_claims">View Your Claims</string>
    <string name="claim">Claim</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="my_deliveries">My Deliveries</string>
    <string name="drop_off_at">Drop off at:</string>
    <string name="status_claimed_short">Requesting driver</string>
    <string name="user_deliveries_title">Your Deliveries</string>
    <string name="delivery_details_title">Delivery Details</string>
    <string name="claim_this_delivery">Claim This Delivery</string>
    <string name="donation_delivered">Donation Delivered</string>
    <string name="view_details">View Details</string>
    <string name="current_location">Current Location</string>
    <string name="no_open_donations_yet">No Open Donations Yet</string>
    <string name="delivery">Delivery</string>
    <string name="no_claims_yet">No Claims Yet</string>
    <string name="donor">Donor</string>
    <string name="driver">Driver</string>
    <string name="claimer">Claimer</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company_name_optional">Company Name (optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">zipCode</string>
    <string name="servings_11">Servings: 11</string>
    <string name="ready_at_10am">Ready at 10am</string>
    <string name="pickup_by_10pm">Pickup by 10pm</string>
    <string name="dropoff_by_11pm">Dropoff by 11pm</string>
    <string name="pickup_location">Pickup Location:</string>
    <string name="dropoff_location">Dropoff Location:</string>
    <string name="miracosta_cafe" translatable="false">MiraCosta Cafe</string>
    <string name="_1_barnard_drive_oceanside_ca_92009">1 Barnard Drive Oceanside, CA 92009</string>
    <string name="view_my_deliveries">View My Deliveries</string>
    <string name="company_name">Company Name</string>
    <string name="dropoffendtime">DropOffEndTime</string>
    <string name="st_jude_s_shelter">St Jude\'s Shelter</string>
    <string name="_15_servings">15 servings</string>
    <string name="pick_up_before_5_30_pm">Pick up before 5:30 pm</string>
    <string name="claimed_waiting_on_driver">Claimed Waiting on driver</string>
    <string name="requesting_driver">Requesting driver</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome">Welcome</string>
    <string name="error_invalid_email_or_password">Invalid email or password</string>
    <string name="error_invalid_user">Error redirecting user. (incompatible type?)</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="user_registered_msg">User Registered successfully</string>
    <string name="user_type">Select User Type</string>
    <string name="user_first_name">Enter First Name</string>
    <string name="user_last_name">Enter Last Name</string>
    <string name="confirm_password_no_match">Confirm password does not match</string>
    <string name="enter_valid_address">Please enter valid address</string>
    <string name="enter_valid_city">Please enter valid city</string>
    <string name="select_drop_off_time">Select dropOff Time</string>
    <string name="claimed_successfully">Claimed Successfully</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="food_type">Food Type:</string>
    <string name="other_infos">Other Info:</string>
    <string name="servings">Servings:</string>
    <string name="ready_time">Ready Time:</string>
    <string name="pickup_end_time_">Pick up end Time:</string>
    <string name="claim_added_success">Claim Added successfully</string>
    <string name="other_dummy_info">Other dummy info</string>
    <string name="select_pickup_time">Please Select a Pickup Time</string>
    <string name="see_you">See you then</string>
    <string name="delivery_claimed_from">Delivery claimed from</string>
    <string name="at">at</string>
    <string name="error_retrieving_user_info">Error retrieving user information.</string>
    <string name="delivery_registered">Delivery completion registered. Thank you!</string>
    <string name="select_type_of_food">Please select a type of food.</string>
    <string name="thank_you_for_donation">Thank you for your donation!</string>
</resources>
