<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgUserType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegister">

        <RadioButton
            android:id="@+id/rbDonor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donor" />

        <RadioButton
            android:id="@+id/rbDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver" />

        <RadioButton
            android:id="@+id/rbClaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claimer" />
    </RadioGroup>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/first_name"
        android:inputType="text"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgUserType" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/last_name"
        android:inputType="text"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@id/etFirstName" />

        <EditText
            android:id="@+id/etCompanyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/company_name_optional"
            android:inputType="text"
            android:maxLength="30"
            app:layout_constraintEnd_toEndOf="@id/etFirstName"
            app:layout_constraintStart_toStartOf="@id/etFirstName"
            app:layout_constraintTop_toBottomOf="@+id/etLastName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            app:layout_constraintEnd_toEndOf="@id/etFirstName"
            app:layout_constraintStart_toStartOf="@id/etFirstName"
            app:layout_constraintTop_toBottomOf="@+id/etCompanyName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/city"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@id/etAddress" />

    <EditText
        android:id="@+id/etState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/state"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@id/etCity" />

    <EditText
        android:id="@+id/etZip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="@string/zipcode"
        android:inputType="number"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@id/etState" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etZip" />

        <include
            android:id="@+id/loader"
            layout="@layout/layout_loader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
             />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
